--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
+    "node": "14.0.0",
+    "npm": "6.0.0"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
